@@ -435,6 +435,7 @@ Full API documentation is available at http://www.mediawiki.org/wiki/API
 * Add list of sections to action=parse output
 * Added action=logout
 * Added cascade flag to prop=info&inprop=protections
+* Added wlshow parameter to list=watchlist, similar to rcshow (list=recentchanges)
 
 === Languages updated in 1.12 ===
 
